finish on user activation (no email yet)
